--- a/_data/mainmenu.yml
+++ b/_data/mainmenu.yml
@@ -11,6 +11,6 @@ menu:
       - title: Web
         url: /koru-jekyll-template/pages/submenu.html
   - title: GitHub
-    url: /koru-jekyll-template/pages/main-menu.html
+    url: https://github.com/NCAR/VisualComparator
   - title: Support
     url: /koru-jekyll-template/pages/support.html
