--- a/docs/_data/mainmenu.yml
+++ b/docs/_data/mainmenu.yml
@@ -5,11 +5,11 @@ menu:
     url: /koru-jekyll-template/pages/layouts.html
     submenu:
       - title: Windows
-        url: /koru-jekyll-template/pages/submenu.html
+        url: https://visual-comparator-binaries.s3.amazonaws.com/Comparator_Win_v0_1a.zip
       - title: Mac
-        url: /koru-jekyll-template/pages/submenu.html
+        url: https://visual-comparator-binaries.s3.amazonaws.com/Comparator_Mac_v0_1a.zip
       - title: Web
-        url: /koru-jekyll-template/pages/submenu.html
+        url: https://visual-comparator-binaries.s3.amazonaws.com/Comparator_Web_v0_1a.zip
   - title: GitHub
     url: https://github.com/NCAR/VisualComparator
   
