--- a/docs/_data/mainmenu.yml
+++ b/docs/_data/mainmenu.yml
@@ -1,8 +1,8 @@
 menu:
   - title: About
-    url: /koru-jekyll-template/pages/support.html
+    url: ../pages/layouts.html
   - title: Download
-    url: /koru-jekyll-template/pages/layouts.html
+    url: ../pages/layouts.html
     submenu:
       - title: Windows
         url: https://visual-comparator-binaries.s3.amazonaws.com/Comparator_Win_v0_1a.zip
