--- a/docs/_data/mainmenu.yml
+++ b/docs/_data/mainmenu.yml
@@ -1,8 +1,8 @@
 menu:
   - title: About
-    url: VisualComparator/pages/layouts.html
+    url: VisualComparator/docs/pages/layouts.md
   - title: Download
-    url: VisualComparator/pages/layouts.html
+    url: VisualComparator/docs/pages/layouts.md
     submenu:
       - title: Windows
         url: https://visual-comparator-binaries.s3.amazonaws.com/Comparator_Win_v0_1a.zip
