--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -8,6 +8,9 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
+
+gem "kramdown", ">= 2.3.0"
+
 gem "jekyll", "~> 3.8.5"
 
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
