--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Visual Comparator
-email: swes@ucar.edu
+email: ncheruku@ucar.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -25,7 +25,7 @@ github_username:  geinosky
 
 # Build settings
 markdown: kramdown
-remote_theme: ncar/koru-jekyll@1.0.25
+remote_theme: ncar/koru-jekyll@1.0.43
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
